# site_availability_checker

./: .env  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 293b52a1c4b7_auto_migration.py  4065649fc0c7_auto_migration.py  425fe767b964_auto_migration.py  58554d993dc7_auto_migration.py  6075787aa7d4_auto_migration.py  91284a29d492_auto_migration.py  e984c4417321_auto_migration.py  f355dbf86365_auto_migration.py  f7ec9d820286_auto_migration.py
backend/src/: main.py
backend/src/core/: config.py
backend/src/core/base/: model.py  repository.py
backend/src/core/security/: token_manager.py
backend/src/modules/api_key/: dependencies.py  exception_handlers.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  service.py  utils.py
backend/src/modules/auth/: dependencies.py  exception_handlers.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  service.py
backend/src/modules/auth/email/: email_backend.py  email_config.py
backend/src/modules/public_api/: app.py  dependencies.py  router.py
backend/src/modules/site_checker/: dependencies.py  exception_handlers.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  service.py
backend/src/modules/site_checker/workers/: tasks.py
backend/tests/: conftest.py  test_api_key_router.py  test_api_key_service.py  test_auth_router.py  test_auth_service.py  test_checker_service.py  test_public_api_router.py  test_site_router.py
frontend/: index.html  package-lock.json  package.json
(+16 files in other folders)
