[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.6.2",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "fastapi-mail>=1.6.4",
    "greenlet>=3.5.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "taskiq>=0.12.4",
    "taskiq-aio-pika>=0.6.0",
    "taskiq-redis>=1.2.2",
    "uvicorn>=0.49.0",
]
[tool.pytest.ini_options]
pythonpath = [
  "."
]
asyncio_mode = "auto"
